Update 'r3n5kwpka-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:4859ee813b05b8e38bc24e2205b0a4f43549d306@sha256:b29d7e8fea5183973c7f290adde51b2b1ec8fe767c5908846c62f192d50310f6

--- a/components/r3n5kwpka-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/r3n5kwpka-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: r3n5kwpka-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:4859ee813b05b8e38bc24e2205b0a4f43549d306@sha256:b29d7e8fea5183973c7f290adde51b2b1ec8fe767c5908846c62f192d50310f6
+          name: container-image
